force-app/main/default/objects/ssot__Account__dlm/fields/ssot__Account_PartyId_map_Individual_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Account_PartyId_map_Individual_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_PartyId_map_Individual_Id_N_1</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Account_PartyId_map_Individual_Id_N_1</relationshipLabel>
    <relationshipName>Account_PartyId_map_Individual_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>