force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountNumber__c</fullName>
    <label>[DoNotUse]Account Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AccountNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>