force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AlternateName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AlternateName__c</fullName>
    <label>Alternate Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AlternateName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>