force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AutoPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AutoPaymentAmount__c</fullName>
    <label>Auto Payment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AutoPaymentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>