force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AutoPaymentAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__AutoPaymentAmountCurrency__c</fullName>
    <label>Auto Payment Amount Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AutoPaymentAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>