force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AutoPaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AutoPaymentMethodId__c</fullName>
    <label>Auto Payment Method</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AutoPaymentMethodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>