force-app/main/default/objects/ssot__Account__dlm/fields/ssot__BalanceUnitOfMeasureCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__BalanceUnitOfMeasureCurrency__c</fullName>
    <label>[DoNotUse]Balance Unit OfMeasureCurrency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BalanceUnitOfMeasureCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>