force-app/main/default/objects/ssot__Account__dlm/fields/ssot__DefaultFreightTerms__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultFreightTerms__c</fullName>
    <label>[DoNotUse]Default Freight Terms</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DefaultFreightTerms</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>