force-app/main/default/objects/ssot__Account__dlm/fields/ssot__FaxPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FaxPhoneId__c</fullName>
    <label>Fax Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FaxPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>