force-app/main/default/objects/ssot__Account__dlm/fields/ssot__IndividualId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndividualId__c</fullName>
    <label>Individual</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndividualId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>