force-app/main/default/objects/ssot__Account__dlm/fields/ssot__IsActive__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsActive__c</fullName>
    <label>Is Active</label>
    <length>6</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsActive</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>