force-app/main/default/objects/ssot__Account__dlm/fields/ssot__IsCreditBlocked__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCreditBlocked__c</fullName>
    <label>Credit Blocked</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCreditBlocked</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>