force-app/main/default/objects/ssot__Account__dlm/fields/ssot__isSeller__c.field-meta.xml
<CustomField>
    <fullName>ssot__isSeller__c</fullName>
    <label>Is Seller</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isSeller</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>