force-app/main/default/objects/ssot__Account__dlm/fields/ssot__LastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastVisitDate__c</fullName>
    <label>Last Visit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastVisitDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>