force-app/main/default/objects/ssot__Account__dlm/fields/ssot__OperatingHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__OperatingHours__c</fullName>
    <label>[DoNotUse]Operating Hours</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OperatingHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>