force-app/main/default/objects/ssot__Account__dlm/fields/ssot__OrderDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__OrderDeliveryMethod__c</fullName>
    <label>[DoNotUse]Order Delivery Method</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OrderDeliveryMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>