force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PrimarySalesContactPointId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimarySalesContactPointId__c</fullName>
    <label>Primary Sales Contact Point</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimarySalesContactPointId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>