force-app/main/default/objects/ssot__Account__dlm/fields/ssot__rel_1697761151412_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761151412_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_BillContactAddressId_map_Con_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>Account_BillContactAddressId_map_Con_rel</relationshipLabel>
    <relationshipName>rel_1697761151412_end</relationshipName>
    <type>Lookup</type>
</CustomField>