force-app/main/default/objects/ssot__Account__dlm/fields/ssot__rel_1697761151490_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761151490_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_FaxPhoneId_map_ContactPointP_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>Account_FaxPhoneId_map_ContactPointP_rel</relationshipLabel>
    <relationshipName>rel_1697761151490_end</relationshipName>
    <type>Lookup</type>
</CustomField>