force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ShippingContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingContactId__c</fullName>
    <label>Shipping Contact</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShippingContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>