force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SixtyDayBalanceAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__SixtyDayBalanceAmountCurrency__c</fullName>
    <label>Sixty Day Balance Amount Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SixtyDayBalanceAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>