force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SLAExpirationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>