force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SLATypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SLATypeId__c</fullName>
    <label>SLA Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SLATypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>