force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SourceSystemIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceSystemIdentifier__c</fullName>
    <label>Source System Identifier</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceSystemIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>