force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ThirtyDayBalanceAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ThirtyDayBalanceAmountCurrency__c</fullName>
    <label>Thirty Day Balance Amount Currency</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ThirtyDayBalanceAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>