force-app/main/default/objects/ssot__Account__dlm/fields/ssot__UseAsBillingAccount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UseAsBillingAccount__c</fullName>
    <label>Use As Billing Account</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UseAsBillingAccount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>