force-app/main/default/objects/ssot__Account__dlm/fields/ssot__UseAsServiceAccount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UseAsServiceAccount__c</fullName>
    <label>Use As Service Account</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UseAsServiceAccount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>