force-app/main/default/objects/ssot__Account__dlm/fields/ssot__UseAsShippingAccount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UseAsShippingAccount__c</fullName>
    <label>Use As Shipping Account</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UseAsShippingAccount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>